[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/utils/scripts/EN_WorldDetector.gd" type="Script" id=1]


[node name="WorldDetector" type="Node2D"]
script = ExtResource( 1 )

[node name="borderRC" type="RayCast2D" parent="."]
position = Vector2( 50, 0 )
enabled = true
collision_mask = 4

[node name="bottomRC" type="RayCast2D" parent="."]
position = Vector2( 0, -56 )
enabled = true
cast_to = Vector2( 150, 0 )
collision_mask = 4

[node name="topRC" type="RayCast2D" parent="."]
position = Vector2( 0, -128 )
enabled = true
cast_to = Vector2( 180, 0 )
collision_mask = 4
